changes in styling

--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,7 @@
 <section id="available">
   <div class="container-fluid">
     <div class="Stock">
-      <div class="row">
+      <div class="row stock">
         <div class="col-4 shop">
           <div class="title">
             <h4>Available <span>Products</span></h4>
