--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img src="icons/cart.png" alt="cart">
+                    <img id="cart" src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -112,7 +112,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.1800</p>
-                    <img src="icons/cart.png" alt="cart">
+                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img src="icons/cart.png" alt="cart">
+                    <img id="cart" onclick="alert('the product is out of stock')" src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img src="icons/cart.png" alt="cart">
+                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
                 </div>
                 
             </div>
