--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img id="cart" src="icons/cart.png" alt="cart">
+                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
