--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </button>
                     <nav>
                       <ul class="navigation">
-                        <li class="nav-item"><a href="#">Home</a></li>
+                        <li class="nav-item"><a href="#hero">Home</a></li>
                         <li class="nav-item"><a href="shop.html">Shop</a></li>
                         <li class="nav-item"><a href="#about">About</a></li>
                         <li class="nav-item"><a href="#contact">Contact</a></li>
@@ -32,7 +32,7 @@
                 </div>
               </nav>
         </div>
-    </section>
+    </section>>
     <!--end header sections -->
     <!--hero section-->
     <section id="hero">
@@ -62,11 +62,11 @@
                             <div class="list">
                                 <h3>Categories</h3>
                                 <ul class="items">
-                                    <li><a href="#">Sneaker</a></li>
-                                    <li><a href="#">Boots</a></li>
-                                    <li><a href="#">Sandels</a></li>
-                                    <li><a href="#">Sports</a></li>
-                                    <li><a href="#">high-hills</a></li>
+                                    <li><a href="shop.html">Sneaker</a></li>
+                                    <li><a href="shop.html">Boots</a></li>
+                                    <li><a href="shop.html">Sandels</a></li>
+                                    <li><a href="shop.html">Sports</a></li>
+                                    <li><a href="shop.html">high-hills</a></li>
                                 </ul>
     
                             </div>
@@ -166,8 +166,8 @@
                     <div class="col-6">
                         <div class="about-info">
                             <h4>About <span>Sharks</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae molestias deleniti enim maxime? Quis obcaecati voluptas aspernatur dolor ea facilis velit. Id non consequatur, asperiores soluta pariatur deserunt porro! <br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem beatae provident similique et! Facilis veniam explicabo deserunt quis laborum aperiam alias modi doloremque debitis adipisci, vero, eos id cumque nisi.</p>
+                            <p>The first store was opened in 2024 feb, a small space about 320sq.f which served for about 1 months,  Throughout the journey we built a huge customer base and a huge online following that enabled us to have an easy scale up. At the end of 2024, we will scale up to a store of about 5000sq.f which features one storey space. We will also expand our product range and added one of one jackets and other apparel to the store. We have since grown our catalog to accommodate products on consignment from Made in Kenya artists.  
+                            </p>
                         </div>
                     </div>
                     
