--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
                     </button>
                     <nav>
                       <ul class="navigation">
-                        <li class="nav-item"><a href="#">Home</a></li>
+                        <li class="nav-item"><a href="index.html">Home</a></li>
                         <li class="nav-item"><a href="shop.html">Shop</a></li>
                         <li class="nav-item"><a href="#about">About</a></li>
                         <li class="nav-item"><a href="#contact">Contact</a></li>
@@ -80,7 +80,7 @@
            </div>
           
           <div id="buy-button">
-            <button class="btn" id="buy-button" >Buy Now</button>
+            <button onclick="alert('make paymet on 0115314344')" class="btn" id="buy-button" >Buy Now</button>
           </div>
           </div>
         </div>
@@ -111,8 +111,9 @@
               <div class="col-6">
                   <div class="about-info">
                       <h4>About <span>Sharks</span></h4>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae molestias deleniti enim maxime? Quis obcaecati voluptas aspernatur dolor ea facilis velit. Id non consequatur, asperiores soluta pariatur deserunt porro! <br>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem beatae provident similique et! Facilis veniam explicabo deserunt quis laborum aperiam alias modi doloremque debitis adipisci, vero, eos id cumque nisi.</p>
+                      <p>The first store was opened in 2020, a small space about 320sq.f which served for about 14 months, before we expanded to a space of about 1000sq.f. Throughout the journey we built a huge customer base and a huge online following that enabled us to have an easy scale up. At the end of 2022, we scaled up to a store of about 5000sq.f which features one storey space. We also expanded our product range and added one of one jackets and other apparel to the store. We have since grown our catalog to accommodate products on consignment from Made in Kenya artists.  
+
+                        Kicks Kenya's dedicated staff, dynamic environment, and commitment to exceptional customer service all provide a unique experience for buyers. We have also increased our employee number to more than 18 permanent employees and several casual workers. </p>
                   </div>
               </div>
               
