--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <h2>Supper Value Deals</h2>
                             <h1>On aLL Produts</h1>
                             <p>Save more with Sharks Shoes Collections</p>
-                            <button class="btn">Shop now</button>
+                            <button onclick="" class="btn">Shop now</button>
                         </div>
                         <div class="col">
                             <div class="list">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
+                    <img id="cart"  onclick="alert('Mpesa send money 0115314344')"  src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -112,7 +112,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.1800</p>
-                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
+                    <img id="cart"  onclick="alert('Mpesa send money 0115314344')" src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img id="cart" onclick="alert('the product is out of stock')" src="icons/cart.png" alt="cart">
+                    <img id="cart"  onclick="alert('Mpesa send money 0115314344')"src="icons/cart.png" alt="cart">
                 </div>
             </div>
             <div class="col-3 product-1">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="price">
                     <p>ksh.4500</p>
-                    <img id="cart" onclick="alert('the product is out of stock')"  src="icons/cart.png" alt="cart">
+                    <img id="cart" onclick="alert('Mpesa send money 0115314344')"  src="icons/cart.png" alt="cart">
                 </div>
                 
             </div>
@@ -200,7 +200,11 @@
         </div>
 
     </section>
+
     <!--end contact sections -->
+   
+
+    
     <script defer src="JS/index.js"></script>
 </body>
 </html>
